--- a/basic.css
+++ b/basic.css
@@ -50,7 +50,7 @@ main {
 }
 
 main .container {
-    width: 80%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,30 +62,28 @@ main .container {
     margin-top: 50px;
     background-color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border: 0.8px solid black;
 }
-
-/*
-
-WHEN HANDLING FORMS
 
 form {
-    width: 70%;
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    margin-top: 10px;
-}
-
-label {
-    margin: 10px 0 5px;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
 }
 
 input {
-    margin-bottom: 10px;
-    padding: 8px;
-    width: 100%;
+    font-size: 20px;
+    align-self: flex-end;
+    padding: 10px;
+    margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+label:first-child {
+    margin-top: 15px;
 }
 
 button {
@@ -95,15 +93,19 @@ button {
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
+    height: 50px;
+    margin-bottom: 10px;
 }
 
 button:hover {
     background-color: #a21c1d;
 }
 
-#errorDiv, #successDiv {
+.header {
     margin-top: 10px;
-} */
+    margin-bottom: 10px;
+    font-size: 50px;
+}
 
 footer{
     border: black 1px solid;
