--- a/register.css
+++ b/register.css
@@ -1,4 +1,4 @@
-form {
+/* form {
     display: flex;
     flex-direction: column;
 }
@@ -40,4 +40,4 @@ button:hover {
 
 .container {
     border: 0.8px solid black;
-}
+} */
