--- a/basic.css
+++ b/basic.css
@@ -149,3 +149,12 @@ footer{
   a:hover {
     color: white;
   }
+
+@media (max-width 1080px) {
+    main .container {
+        width: 80%;
+    }
+    .header {
+        font-size: 30px;
+    }
+}
