--- a/staff.css
+++ b/staff.css
@@ -1,40 +1,90 @@
 body {
-    background-image: none;
+    height: 170vh;
 }
+
 .order-container {
     background-color: rgba( 255, 255, 255, 0.5);
     backdrop-filter: blur(2px);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     display: flex;
-    align-items: center;
     flex-direction: column;
-    width: 80%;
-    margin-top: 10px;
+    align-items: center;
+    width: 500px;
     margin-left: 10px;
     margin-right: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     border: 1px solid black;
     border-radius: 5px;
     padding: 0;
     max-height: 50vh;
-    overflow-x: hidden;
-    overflow-y: scroll;
 }
+
+#claimedContainer {
+    margin-bottom: 100px;
+}
+
 .orders {
+    z-index: 100;
     display: flex;
     flex-direction: column;
     background-color: rgba( 255, 255, 255, 0.5);
-    /* border: 0.5px black solid; */
+    border: 0.5px black solid;
     border-radius: 5px;
-    margin-bottom: 10px;
-    width: 100%;
+    margin: 10px;
     padding: 10px;
+    width: 80%;
 }
 
-h2 {
-    margin-left: 10px;
-    align-self: flex-start;
+.orderId, .customerName, .totalAmount {
+    font-weight: bold
 }
+
+.item {
+    list-style: none;
+    margin-bottom: 10px;
+}
+
+.header {
+    height: 10vh;
+    margin: 0;
+    width: 100%;
+    background-color: #7f0708;
+    padding: 0;
+    color: white;
+}
+
+.heading {
+    font-size: 40px;
+    text-align: center;
+    align-self: center;
+}
+
+.body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    width: 96%;
+    background-color: rgba( 255, 255, 255, 0.5);
+    overflow-x: hidden;
+    overflow-y: scroll;
+    border-radius: 5px;
+}
+
+.body::-webkit-scrollbar {
+    width: 10px;
+}
+
+.body::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #7773;
+}
+
+.body::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #888;
+}
+
 
 @media (max-width: 600px) {
     .order-container {
