--- a/basic.css
+++ b/basic.css
@@ -114,6 +114,7 @@ button:hover {
 }
 
 footer{
+    padding-left: 5px;
     border: black 1px solid;
     margin-top: auto;
     height: 50px;
@@ -121,15 +122,15 @@ footer{
     background-color: #7f0708;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 1000;
-  }
+}
 
-  footer div{
+footer div{
     padding: 3px;
     text-align: center;
     font-size: 20px;
@@ -138,20 +139,18 @@ footer{
     background-color: #fefbf4;
     color: black;
     margin-top: 10px;
-    margin-left: 30px;
-    margin-right: 30px;
     margin-bottom: 10px;
     width: 80px;
-  }
+}
 
-  footer div:hover {
+footer div:hover {
     background-color: gray;
-  }
+}
 
-  a {
+a {
     color: black;
     text-decoration: none;
-  }
+}
 
   a:hover {
     color: white;
