--- a/basic.css
+++ b/basic.css
@@ -123,6 +123,7 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    allign-items: center;
     position: fixed;
     bottom: 0;
     left: 0;
