--- a/basic.css
+++ b/basic.css
@@ -122,7 +122,7 @@ footer{
     background-color: #7f0708;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     allign-items: center;
     position: fixed;
     bottom: 0;
@@ -132,7 +132,6 @@ footer{
 }
 
 footer div{
-    align-self: center;
     padding: 3px;
     text-align: center;
     font-size: 20px;
