--- a/myOrders.css
+++ b/myOrders.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-    height: 500px;
+    height: 650px;
     padding: 0;
 }
 
@@ -34,12 +34,12 @@ body {
     border-radius: 0 0 4px 4px;
 }
 
-.order {
+.orders {
     text-shadow: 0 2px 20px rgba(0, 0, 0, 1);
     color: white;
     border-radius: 5px;
     width: 98%;
-    height: 300px;
+    height: auto;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
@@ -48,18 +48,59 @@ body {
     margin-bottom: 10px;
     margin-top: 10px;
     margin-left: 5px;
+    overflow: hidden;
 }
 
-.cancel-btn {
+.orders-header {
+    padding-top: 10px;
+    padding-left: 50px;
+    margin-bottom: 5px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.orders-header div {
+    margin:0;
+    padding: 0;
+    height: 30px;
+}
+
+.itemDiv {
+    text-shadow: 0 2px 20px rgba(0, 0, 0, 1);
+    color: white;
+    border-radius: 5px;
+    width: 96%;
+    height: 60px;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5px;
+}
+
+.itemDiv div {
+    margin-left: 20px;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 20px;
+}
+
+.cancel-button {
     background-color: red;
     color: white;
     border: none;
     padding: 10px;
     cursor: pointer;
     width: 200px;
+    height: 50px;
 }
 
-.cancel-btn:hover {
+.cancel-button:hover {
     background-color: darkred;
 }
 
