--- a/basic.css
+++ b/basic.css
@@ -123,7 +123,7 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    allign-items: center;
+    align-items: center;
     position: fixed;
     bottom: 0;
     left: 0;
