--- a/staff.css
+++ b/staff.css
@@ -139,6 +139,12 @@ body {
     margin-bottom: 100px;
 }
 
+.welcomeMessage {
+    align-self: flex-start;
+    margin-left: 10%;
+    margin-top: 20px;
+}
+
 @media (max-width: 600px) {
     .order-container {
         margin-top: 10px;
