--- a/manageStock.css
+++ b/manageStock.css
@@ -4,7 +4,7 @@ body {
 
 .productsContainer {
     border-radius: 5px;
-    margin-top: 50px;
+    margin-top: 0px;
     margin-bottom: 50px;
     display: flex;
     flex-direction: column;
@@ -60,36 +60,63 @@ body {
     color: white;
     border-radius: 5px;
     width: 98%;
-    height: 60px;
+    height: 100px;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     margin-bottom: 10px;
     margin-top: 10px;
     margin-left: 5px;
 }
 
-.product div {
-    margin-left: 20px;
-    padding: 0;
+.buttons, .infos {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    font-size: 20px;
+    justify-content: space-between;
+    padding: 0;
+    margin: 4% 3% 0 3%;
+    text-align: center;
+    font-size: 17px;
 }
 
-.product .pname {
+/* .infos {
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 4%;
+}
+
+.buttons {
+    margin-top: 4%;
+    margin-left: 3%;
+    margin-right: 3%;
+} */
+
+.pname {
+    width: 35%;
+}
+
+.pprice {
     width: 30%;
 }
 
-.product .pprice {
-    width: 20%;
+.pstock {
+    width: 35%;
 }
 
-.product .pbutton {
-    padding-top: 10px;
-    width: 30%;
+.pbutton {
+    width: 40%;
+}
+
+button {
+    background-color: #7f0708;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    height: 100%;
+    width: 100%;
+    font-size: 11px;
 }
 
 .welcomeMessage {
@@ -98,7 +125,7 @@ body {
     margin-top: 20px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 400px) {
 
     #products-container {
         width: 90%;
